--- a/PrivateTemplates/kavemans.dev/footer.html
+++ b/PrivateTemplates/kavemans.dev/footer.html
@@ -1,5 +1,5 @@
 <footer class="container centerize">
   <h2>
-    Copyright &copy; Kaveman 2022. All Rights Reserved
+    Copyright &copy; Kaveman 2022-24. All Rights Reserved
   </h2>
 </footer>
