--- a/PublicTemplates/kavemans.dev/projects/index.html
+++ b/PublicTemplates/kavemans.dev/projects/index.html
@@ -19,7 +19,7 @@
         <h2>Projects</h2>
         <div class="feed dynamicMargin centerize">
           <div class="row">
-            <img src="/src/sprites/logo/BattleOfTheForcesLogo.png" />
+            <img src="/src/sprites/logo/BattleOfTheForces.png" />
             <a href="#">Fullstack Developer - Battle of the Forces</a>
             <span>
               A game built with Unity3D using the C# language. On server side, uses Entity Framework with
@@ -29,8 +29,8 @@
             </span>
           </div>
           <div class="row">
-            <img src="/src/sprites/logo/TankiXLogo.png" />
-            <a href="#">Backend Developer - Revive Tanki X</a>
+            <img src="/src/sprites/logo/ReviveTankiX.png" />
+            <a href="/projects/TankiX">Programmer/Level Designer - Revive Tanki X</a>
             <span>
               Built a server with a team of 4 members for Tanki X. Was in charge of building in-game client
               authentication, cross-server communication and central server. Used Entity Framework with MySQL as the storage
