Added Constant Aspect Ratio and No Image support

--- a/PublicTemplates/kavemans.dev/projects/TankiX/index.html
+++ b/PublicTemplates/kavemans.dev/projects/TankiX/index.html
@@ -32,10 +32,10 @@
       </div>        
       <div class="container centerize">
         <h2>Projects</h2>
-        <div class="lessonItem dynamicMargin">
+        <div class="projectEntry dynamicMargin">
           <div class="graphic">
             <img src="http://via.placeholder.com/16x9" />
-            <img src="http://via.placeholder.com/160x90" />
+            <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
             <a class="title">Tanki X Server</a>
@@ -55,8 +55,11 @@
             </div>
           </div>
         </div>
-        <div class="lessonItem dynamicMargin">
-          <img src="/src/images/TankiX/thumbnail/madnessUpdate-min.png" />
+        <div class="projectEntry dynamicMargin">
+          <div class="graphic">
+            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/TankiX/thumbnail/madnessUpdate-min.png" />
+          </div>
           <div class="content">
             <a class="title">Adding Maps into the Game</a>
             <span class="labels">
@@ -74,8 +77,11 @@
             </div>
           </div>
         </div>
-        <div class="lessonItem dynamicMargin">
-          <img src="/src/images/TankiX/thumbnail/LandingPage.png" />
+        <div class="projectEntry dynamicMargin">
+          <div class="graphic">
+            <img src="http://via.placeholder.com/16x9" />
+            <img src="/src/images/TankiX/thumbnail/LandingPage.png" />
+          </div>
           <div class="content">
             <a class="title">Landing Page</a>
             <span class="labels">
