--- a/PublicTemplates/kavemans.dev/projects/TankiX.html
+++ b/PublicTemplates/kavemans.dev/projects/TankiX.html
@@ -38,7 +38,7 @@
             <!--<img src="http://via.placeholder.com/160x90" />-->
           </div>
           <div class="content">
-            <a class="title">Tanki X Server</a>
+            <a class="title">Tanki X Game Server</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
