--- a/PublicTemplates/kavemans.dev/projects/TankiX.html
+++ b/PublicTemplates/kavemans.dev/projects/TankiX.html
@@ -61,7 +61,7 @@
             <img src="/src/images/TankiX/thumbnail/madnessUpdate-min.png" />
           </div>
           <div class="content">
-            <a class="title">Adding Maps into the Game</a>
+            <a href="./TankiX/AddingMaps" class="title">Adding Maps into the Game</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/unity.png" alt="Unity3D" />
