Contact Form Update
 + Using ExperimentalDB

--- a/PrivateTemplates/kavemans.dev/footer.html
+++ b/PrivateTemplates/kavemans.dev/footer.html
@@ -1,5 +1,7 @@
 <footer class="container centerize">
-  <h2>
-    Copyright &copy; Kaveman 2022-24. All Rights Reserved
-  </h2>
+  <div class="dynamicMargin">
+    <h2>
+      Copyright &copy; 2022-24 Kaveman. All Rights Reserved
+    </h2>
+  </div>
 </footer>
