--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -20,12 +20,12 @@
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
         </div>
-        <span class="credits">Background: A map I workfdsfsed on called "Madness" for the <a href="https://txrevive.net">TankiX</a> project</span>
+        <span class="credits">Background: A map I worked on called "Madness" for the <a href="/projects/TankiX">TankiX</a> project</span>
       </main>
       <div id="knownLanguagesAndTech" class="container centerize">
         <h2>Skills</h2>
         <div class="container centerize">
-            <div class="item centerize" label="HTML">
+            <div class="item centerize" data-label="HTML">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -35,7 +35,7 @@
               </div>
                 <img src="/src/sprites/langs/html.png" />
             </div>
-            <div class="item centerize" label="CSS">
+            <div class="item centerize" data-label="CSS">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -45,7 +45,7 @@
               </div>
                 <img src="/src/sprites/langs/css.png" />
             </div>
-            <div class="item centerize" label="Javascript">
+            <div class="item centerize" data-label="Javascript">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -55,7 +55,7 @@
               </div>
                 <img src="/src/sprites/langs/javascript.png" />
             </div>
-            <div class="item centerize" label="node.js">
+            <div class="item centerize" data-label="node.js">
                 <div class="popupAnchor centerize">
                   <div>
                     <div class="popup">
@@ -65,7 +65,7 @@
                 </div>
                 <img src="/src/sprites/langs/nodejs.png" />
             </div>
-            <div class="item centerize" label="Electron">
+            <div class="item centerize" data-label="Electron">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -75,7 +75,7 @@
               </div>
                 <img src="/src/sprites/langs/electron.png" />
             </div>
-            <div class="item centerize" label="C#">
+            <div class="item centerize" data-label="C#">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -85,7 +85,7 @@
               </div>
                 <img src="/src/sprites/langs/csharp.png" />
             </div>
-            <div class="item centerize" label="Unity3D">
+            <div class="item centerize" data-label="Unity3D">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -95,7 +95,7 @@
               </div>
                 <img src="/src/sprites/langs/unity.png" />
             </div>
-            <div class="item centerize" label="MySQL">
+            <div class="item centerize" data-label="MySQL">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
@@ -105,7 +105,7 @@
               </div>
                 <img src="/src/sprites/langs/mysql.png" />
             </div>
-            <div class="item centerize" label="Git">
+            <div class="item centerize" data-label="Git">
               <div class="popupAnchor centerize">
                 <div>
                   <div class="popup">
