--- a/PublicTemplates/kavemans.dev/projects/TankiX.html
+++ b/PublicTemplates/kavemans.dev/projects/TankiX.html
@@ -29,7 +29,31 @@
         <div class="dynamicMargin">
           <a href="/">Home</a> / <a href="/projects">Projects</a> / Tanki X
         </div>
-      </div>        
+      </div>
+      <div class="container centerize">
+        <h2>Details</h2>
+        <div class="dynamicMargin">
+            Since the closure of Tanki X by AlternativaGames in early 2020, I have been actively involved in the Revive Tanki X community as a developer.
+            Collaborating with other developers via GitHub, my responsibilities included various aspects of client development, including reverse engineering, patching, and maintenance of the game.
+          <p>
+            My expertise extended to frontend development, where I focused on reverse engineering the game client to implement fixes and introduce new content.
+            This involved meticulous attention to detail and a deep understanding of game architecture.
+          </p>
+          <p>
+            During the initial stages of server development, I was tasked with creating a user database, user statistics, and logs.
+            Although I utilized SQLite with ADO.NET for data storage, this implementation remained unfinished and was not deployed beyond the development stage due to time constraints.
+          </p>
+          <p>
+            Among my early contributions were the implementation of two new paint options, "Ocean Canyon" and "Cotton Candy," which expanded the game's customization features.
+          </p>
+          <p>
+            A significant milestone in my contributions was the creation of the Madness map, which introduced a new arena and enhanced gameplay dynamics.
+            My experience as a community developer in Tanki X underscores my proficiency in Unity development, reverse engineering, and collaborative problem-solving.
+          </p>
+          <p>As a disclaimer, I am not affiliated with AlternativaGames, the original developers of Tanki X, and I maintain no association with them at the time of writing.</p>
+        </p>
+        </div>
+      </div>
       <div class="container centerize">
         <h2>Projects</h2>
         <div class="projectEntry dynamicMargin">
