--- a/PublicTemplates/kavemans.dev/projects/TankiX/AddingMaps.html
+++ b/PublicTemplates/kavemans.dev/projects/TankiX/AddingMaps.html
@@ -36,6 +36,7 @@
       <div class="container centerize">
         <h2>Issues</h2>
       </div>
+      <!-- Project Overview -->
     </div>
     <model src="kavemans.dev/footer.html"></model>
     <script src="/src/scripts/KeyFirePlugin.js"></script>
