--- a/PrivateTemplates/kavemans.dev/ErrorPage.html
+++ b/PrivateTemplates/kavemans.dev/ErrorPage.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta charset="UTF-8">
         <title>{?:StatusCode} - {?:Title}</title>
         <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
         <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
         <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
-            footer {
-                position: fixed;
-                bottom: 0px;
-            }
-
             body {
                 background-image: url('/src/images/RTX_Halloween.webp');
                 background-size: cover;
@@ -29,12 +25,12 @@
             }
         </style>
     </head>
-    <body class="centerize">
+    <body class="centerize stickyFooter">
         <div class="ice centerize">
             <model src="kavemans.dev/header.html"></model>
             <div style="font-size: 2em;">{?:Title}</div>
             <span>{?:Subtitle}</span>
-            <model src="kavemans.dev/footer.html"></model>
+            <model src="kavemans.dev/stickyFooter.html"></model>
         </div>
     </body>
 </html>
