--- a/PrivateTemplates/kavemans.dev/header.html
+++ b/PrivateTemplates/kavemans.dev/header.html
@@ -4,6 +4,6 @@
     <a href="/">Home</a>
     <!--<a href="/devlog">Devlog</a>-->
     <a href="/projects">Projects</a>
-    <a href="#">Contact</a>
+    <a href="/contact">Contact</a>
   </nav>
 </header>
