--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -20,7 +20,7 @@
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
         </div>
-        <span class="credits">Background: A map I worked on called "Madness" for the <a href="/projects/TankiX">TankiX</a> project</span>
+        <span class="credits">Background: A map I worked on called "Madness" for the <a href="/orgs/TankiX">TankiX</a> organization</span>
       </main>
       <div id="knownLanguagesAndTech" class="container centerize">
         <h2>Skills</h2>
