Update Madness Page

--- a/PublicTemplates/kavemans.dev/Contact.html
+++ b/PublicTemplates/kavemans.dev/Contact.html
@@ -29,6 +29,7 @@
               <h3>Contact Kaveman</h3>
               <input name="name" type="text" minlength="2" placeholder="Name or Nickname" required />
               <input name="email" type="email" minlength="2" placeholder="Email Address (optional)" />
+              <input name="subject" type="text" minlength="2" placeholder="Re: Subject" />
               <textarea name="message" placeholder="C'mon say something :D"></textarea>
               <div class="horizontalGroup centerize">
                 <span class="error">Error, do the capcha</span>
