--- a/PublicTemplates/kavemans.dev/projects.html
+++ b/PublicTemplates/kavemans.dev/projects.html
@@ -58,6 +58,14 @@
             </span>
           </div>
           <div class="row">
+            <img src="/src/sprites/logo/WebServerProject.png" />
+            <a href="#">Custom C# Web Server - Personal Project</a>
+            <span>
+              Inspired by one of my older projects based in node.js, I rebuilt the HTTP server that featured server-side rendering and server-side event callbacks.
+              I also made ExperimentalSQL, which is a library similar to Entity Framework except based on a based on ADO.NET implementation and is constrained to use SQLite3.
+            </span>
+          </div>
+          <div class="row">
             <img src="/src/sprites/logo/icons8-web-48.png" />
             <a href="#">Fullstack Web Developer - Education Hub</a>
             <span>
