--- a/PrivateTemplates/kavemans.dev/footer.html
+++ b/PrivateTemplates/kavemans.dev/footer.html
@@ -1,7 +1,9 @@
 <footer class="container centerize">
   <div class="dynamicMargin">
     <h2>
-      Copyright &copy; 2022-24 Kaveman. All Rights Reserved
+      Copyright &copy; 2022-24 Kaveman. All Rights Reserved.
+      <br />
+      Icons by <a href="https://fontawesome.com/">Font Awesome</a> and <a href="https://icons8.com/about" target="_blank">Icons8</a>
     </h2>
   </div>
 </footer>
