--- a/PublicTemplates/kavemans.dev/index.html
+++ b/PublicTemplates/kavemans.dev/index.html
@@ -20,7 +20,7 @@
           <span>Hi, my name is Kaveman and I'm a...</span>
           <span id="mainRoleThing">Software Developer</span>
         </div>
-        <span class="credits">Background: A map I worked on called "Madness" for the <a href="/orgs/TankiX">TankiX</a> organization</span>
+        <span class="credits">Background: A map I worked on called <a href="/orgs/TankiX/MadnessUpdate">"Madness"</a> for the <a href="/orgs/TankiX">TankiX</a> orginization</span>
       </main>
       <div id="knownLanguagesAndTech" class="container centerize">
         <h2>Skills</h2>
@@ -33,7 +33,7 @@
                   </div>
                 </div>
               </div>
-                <img src="/src/sprites/langs/html.png" />
+              <img src="/src/sprites/langs/html.png" />
             </div>
             <div class="item centerize" data-label="CSS">
               <div class="popupAnchor centerize">
