--- a/PublicTemplates/kavemans.dev/orgs/TankiX.html
+++ b/PublicTemplates/kavemans.dev/orgs/TankiX.html
@@ -7,7 +7,7 @@
     <link href="/src/styles/framework.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/common.css" type="text/css" rel="stylesheet" />
     <link href="/src/styles/main.css" type="text/css" rel="stylesheet" />
-    <link href="/src/styles/projectOverrides.css" type="text/css" rel="stylesheet" />
+    <link href="/src/styles/orgOverrides.css" type="text/css" rel="stylesheet" />
     <model src="kavemans.dev/FontAwesome"></model>
   </head>
   <body>
@@ -25,36 +25,39 @@
           </span>
         </div>
       </main>
-      <div class="container showBorder centerize">
+      <div class="container showBorder centerize" style="margin-bottom: 0;">
         <div class="dynamicMargin">
           <a href="/">Home</a> / <a href="/projects">Projects</a> / Tanki X
         </div>
       </div>
       <div class="container centerize">
-        <h2>Details</h2>
+        <h2>Overview<span>A breif history of this project</span></h2>
         <div class="dynamicMargin">
-            Since the closure of Tanki X by AlternativaGames in early 2020, I have been actively involved in the Revive Tanki X community as a developer.
-            Collaborating with other developers via GitHub, my responsibilities included various aspects of client development, including reverse engineering, patching, and maintenance of the game.
+            Since the closure of Tanki X by AlternativaGames in early 2020, I have been involved in the Revive Tanki X community as a developer.
+            I've collaborated with other developers, using Discord to communicate and GitHub as the Version Control system,
+            my work included, but wasn't limited to, client development, reverse engineering, patching, and maintenance of the game.
           <p>
-            My expertise extended to frontend development, where I focused on reverse engineering the game client to implement fixes and introduce new content.
-            This involved meticulous attention to detail and a deep understanding of game architecture.
+            During the initial stages of server development, my first tasks was to create a user database, to store information like user inventory, statistics, and logs.
+            My DBMS of choice at the time was SQLite with ADO.NET, this implementation remained unfinished and was not deployed beyond development due to time constraints.
           </p>
           <p>
-            During the initial stages of server development, I was tasked with creating a user database, user statistics, and logs.
-            Although I utilized SQLite with ADO.NET for data storage, this implementation remained unfinished and was not deployed beyond the development stage due to time constraints.
+            I primarily focused on frontend development, where I reverse engineering the game client to implement fixes and introduce new content.
+            A good example is the Madness map, it derives from the Tanki X's prequel Tanki Online. It was a map commonly played with moon gravity where you could knock others off the map.
+            Another member initially built the map using placeholder props, and my contributions involved making new props for the map, correcting map geometry,
+            adjusting and baking lighting, adding initial game logic and mitigating issues involved in releasing the map.
           </p>
           <p>
-            Among my early contributions were the implementation of two new paint options, "Ocean Canyon" and "Cotton Candy," which expanded the game's customization features.
+            Aside from the addition of a map, I've also worked on adding two new paints and two new graffiti items, this required me to understand the games underlaying code
+            and how the game processes assets. In order to add new items into the game I had to understand what a bundle catalog was, how Unity Asset Bundles work,
+            and how to properly build valid bundles within Unity to publish into the game.
           </p>
           <p>
-            A significant milestone in my contributions was the creation of the Madness map, which introduced a new arena and enhanced gameplay dynamics.
-            My experience as a community developer in Tanki X underscores my proficiency in Unity development, reverse engineering, and collaborative problem-solving.
+            As a disclaimer, I am not one of the original developers of the game and I am not affiliated with AlternativaGames at the time of writing.
           </p>
-          <p>As a disclaimer, I am not affiliated with AlternativaGames, the original developers of Tanki X, and I maintain no association with them at the time of writing.</p>
         </p>
         </div>
       </div>
-      <div class="container centerize">
+      <div class="container centerize hr">
         <h2>Projects<span>Most recent shown first</span></h2>
         <div class="projectEntry dynamicMargin">
           <div class="graphic">
@@ -72,6 +75,10 @@
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
             </span>
             <div class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -84,7 +91,7 @@
             <img src="/src/images/TankiX/thumbnail/RisingSchool.Preview.png" />
           </div>
           <div class="content">
-            <a href="./TankiX/BoomboxMapUpdate" class="title">Rising School - Unity Developer</a>
+            <a href="./TankiX/BoomboxUpdate" class="title">Boombox Update - Unity Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/unity.png" alt="Unity3D" />
@@ -92,7 +99,7 @@
               </span>
             </span>
             <div class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              The update that brought a new map called "Rising School"
             </div>
           </div>
         </div>
@@ -102,7 +109,7 @@
             <img src="/src/images/TankiX/thumbnail/madnessUpdate-min.png" />
           </div>
           <div class="content">
-            <a href="./TankiX/MadnessHalloweenUpdate" class="title">Madness - Unity Developer</a>
+            <a href="./TankiX/MadnessUpdate" class="title">Madness - Unity Developer</a>
             <span class="labels">
               <span class="label centerize">
                 <img src="/src/sprites/langs/unity.png" alt="Unity3D" />
@@ -112,9 +119,13 @@
                 <img src="/src/sprites/langs/csharp.png" alt="C#" />
                 <span class="tooltiptext">C#</span>
               </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
+              </span>
             </span>
             <div class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              This update features a new map with two variants and a custom goldbox
             </div>
           </div>
         </div>
@@ -137,6 +148,10 @@
               <span class="label centerize">
                 <img src="/src/sprites/langs/javascript.png" alt="Javascript" />
                 <span class="tooltiptext">Javascript</span>
+              </span>
+              <span class="label centerize">
+                <img src="/src/sprites/langs/github.png" alt="GitHub" />
+                <span class="tooltiptext">GitHub</span>
               </span>
             </span>
             <div class="description">
